# python-project-lvl4

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: CI.yml
fixtures/: labels.json  statuses.json  tasks.json  users.json
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: forms.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_options_alter_label_created_at.py
task_manager/statuses/: views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_options_alter_status_created_at.py
task_manager/tasks/: views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_task_author_alter_task_created_at.py  0004_task_labels.py  0005_alter_task_labels.py  0006_alter_task_options_alter_task_author_and_more.py
task_manager/templates/: index.html
task_manager/tests/: test_labels.py  test_statuses.py  test_tasks.py  test_users.py
task_manager/users/: mixins.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_alter_user_options.py
templates/: base.html  delete.html  form.html  index.html
templates/labels/: labels.html
templates/statuses/: statuses.html
templates/tasks/: task_view.html  tasks.html
templates/users/: users.html
