[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Alexion <alex24bryant@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.6"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
gunicorn = "^20.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
