[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Alexion <alex24bryant@mail.ru>"]
packages = [
    {include = "task_manager"}
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.6"
python-dotenv = "^0.20.0"
gunicorn = "^20.1.0"
django-bootstrap4 = "^22.1"
dj-database-url = "^0.5.0"
whitenoise = "^6.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
